samples/_failures_safe/1761043920_70b7e9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36f590df.c: In function ‘print_compression_info’:
./samples/SAFE/__tmp_36f590df.c:160:36: error: expected ‘)’ at end of input
  160 |     printf("  Flags: 0x%02X\n", ctx
      |           ~                        ^
      |                                    )
./samples/SAFE/__tmp_36f590df.c:160:5: error: expected declaration or statement at end of input
  160 |     printf("  Flags: 0x%02X\n", ctx
      |     ^~~~~~
